# Lab

./: FinalKR.rar  Zoo.Project.rar
FinalKR/: AppZoo.cpp  CMakeLists.txt  Date.cpp  Date.h  testAnimal.cpp  testDate.cpp
Fraction/: CMakeLists.txt  Fraction.cpp  Fraction.h  main.cpp
Inheritance/: CMakeLists.txt  Class.cpp  Class.h  main.cpp
Lab 1.1/: main.cpp
Lab.asm.1/: ConsoleApplication5.cpp
Lab.asm.2/: Task1.cpp  Task1.sln  Task2.cpp
Lab.asm.3/: Task1.cpp  Task2.cpp  Task4.cpp
Lab1.2/: CMakeLists.txt  main.cpp
Lab2.1/: CMakeLists.txt  main.cpp
Lab3.1/: main.cpp
Lab4.1/: CMakeLists.txt  main.cpp
Lab4.3/: CMakeLists.txt  main.cpp
Lab5.1/: CMakeLists.txt  main.cpp
QTlab/Qt/: Mani.py
Stack/: CMakeLists.txt  Calc.cpp  Calc.h  Stack.h  main.cpp
UltKR/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
Zoo.Project/: Animal.cpp  Animal.h  AppZoo.h
Zoo_Project/: Animal.cpp  Date.cpp  Date.h  testAnimal.cpp  testDate.cpp
